--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,9 @@ body {
     overflow-x: hidden;
     line-height: 22px;
 }
+.primeColr{
+    color: #e81414;
+}
 p {
     font-size: 16px;
     line-height: 32px;
@@ -182,6 +185,73 @@ h2.title1 {
     float: left;
     width: 100%;
 }
+.needImg .col-md-3 {
+    padding: 0 2px;
+}
+.needImg img{
+    width: 100%;
+}
+#patientNeeds .row h4{
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.prioriTies .col-md-3 {
+    display: inline-flex;
+    align-items: center;
+}
+
+.prioriTies .col-md-3 p {
+    line-height: 19px;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-left: 15px;
+    font-size: 18px;
+}
+.subPrioriTies .col-md-10{
+    padding-right: 0;
+    padding-left: 10px;
+}
+.subPrioriTies .col-md-1{
+    padding: 0;
+}
+.subPrioriTies .col-md-1 i{
+    font-size: 71px;
+}
+.prioriTies .col-md-3 h1 {
+    font-size: 65px;
+}
+@media only screen and (max-width: 992px){
+    .prioriTies .subPrioriTies {
+        padding-right: 0;
+    }
+    .prioriTies .priIcon{
+        display: none;
+    }
+}
+#unwaverCommit .subUnwaverCommit {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+#unwaverCommit .subUnwaverCommit p {
+    line-height: 20px;
+    font-size: 14px;
+    padding: 10px 0;
+    border-top: 1px solid #a5a2a2;
+    border-bottom: 1px solid #a5a2a2;
+    text-align: center;
+    min-height: 60px;
+    display: table;
+    width: 100%;
+}
+#unwaverCommit .subUnwaverCommit p span{
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#unwaverCommit .subUnwaverCommit img {
+    min-height: 65px;
+}
 .doctr-text h2 {
     color: #fff;
     text-transform: uppercase;
@@ -210,6 +280,26 @@ h2.title1 {
     text-transform: capitalize;
     border-bottom: 3px solid #fcb34c;
     padding-bottom: 15px;
+}
+.team-content>h4, .team-content>p {
+    color: #444;
+    margin-bottom: 5px;
+}
+h4 {
+    font-size: 24px;
+    line-height: 26px;
+}
+.team-content.bg-yellow {
+    background: #fcb34c;
+}
+.team-content {
+    padding: 40px 20px;
+}
+.team-content.bg-color {
+    background: #ebebeb;
+}
+.single-team-member {
+    border: 1px solid #ddd;
 }
 .team-content>h4, .team-content>p {
     color: #444;
