--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,9 +7,6 @@ body {
     overflow-x: hidden;
     line-height: 22px;
 }
-.primeColr{
-    color: #e81414;
-}
 p {
     font-size: 16px;
     line-height: 32px;
@@ -1433,4 +1430,16 @@ h4.spc-heading {
 }
 .references > li{
     font-size: 14px;
+}
+
+.country-select .dropdown {
+    text-align: right;
+}
+
+.country-select .dropdown>a {
+    color: white;
+}
+.country-select .dropdown-menu{
+    right: 0;
+    left: unset;
 }
