Change color of images in  home page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -248,6 +248,7 @@ h2.title1 {
 
 #unwaverCommit .subUnwaverCommit img {
     min-height: 65px;
+    filter: grayscale(1);
 }
 .doctr-text h2 {
     color: #fff;
