--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -19,7 +19,6 @@
 .cirrhosis-testimonials:after {bottom: -1px;height: 10px;}
 a.sus-btn {margin-top: -4px;;}
 .sus-btn {margin-left: 50px;}
-.circle-2 img, .advanced-cirrhosis i.fa.fa-plus {display: none;}
 .advanced-cirrhosis .circle-2, .advanced-cirrhosis .circle{margin-bottom: 30px;}
 .col-md-12.cirrhosis-circle {margin: 30px 0px 30px;}
 .testimonials-details {float: left;width: 100%; top: 90%;}
@@ -33,6 +32,8 @@ div#about h2 {margin-top: 0px;font-size: 30px;margin-bottom: 20px;}
 
 
 @media (min-width: 768px) and (max-width: 991px) {
+	
+/*.circle-2 img, .advanced-cirrhosis i.fa.fa-plus {display: none;}*/
 .scp-banner {margin-top: 48px;}
 .main-menu ul.navbar-nav li {display: inline-block;padding: 0 8px;}
 .layer-1-1 h2 {font-size: 24px;}
@@ -67,8 +68,7 @@ div#about h2 {margin-top: 30px;}
 }
 
 @media screen and (max-width: 991px){
-a.ready-btn.page-scroll{font-size:15px;}
-.slider-content {text-align:left!important;}
+a.ready-btn.page-scroll{font-size:15px;display: table;margin: 0 auto;}
 a.ready-btn.right-btn.page-scroll{height:0px;font-weight:14px;}
 .layer-1-1 h2 {line-height:30px;font-size: 24px;}
 .navbar-default .navbar-toggle, .stick .navbar-default .navbar-toggle {background: #fcb34c!important;padding: 10px!important;display:block;}
@@ -77,7 +77,7 @@ a.ready-btn.right-btn.page-scroll{height:0px;font-weight:14px;}
 .header-area {  top: 0px; }
 .header-area { height: 70px !important; background: #fff;}
 .navbar-header { float: right; width:100%;}
-.nav.navbar-nav.navbar-right, .stick .nav.navbar-nav.navbar-right {background-color: #000000e6; padding: 10px 0px 0px 0px; margin-top: 10px; }
+.nav.navbar-nav.navbar-right, .stick .nav.navbar-nav.navbar-right {background-color: rgba(0,0,0,0.9); padding: 10px 0px 0px 0px; margin-top: 10px; }
 .navbar-nav { border-bottom: none;}
 .main-menu ul.navbar-nav li, .stick .main-menu ul.navbar-nav li { display: block;}
 .main-menu ul.navbar-nav li a, .stick .main-menu ul.navbar-nav li a { padding: 10px 2px;}
@@ -87,6 +87,7 @@ a.ready-btn.right-btn.page-scroll{height:0px;font-weight:14px;}
 .navbar-right {width: 100%;margin-right:0px!important;}
 .navbar-nav>li {float: none;display: block;}
 .about-banner, .banner{margin-top:0px;}
+.scp-text h1{font-size: 30px;}
 
 }
 
@@ -144,7 +145,7 @@ a.button-product {margin-top: 10px;}
 .slider-area {margin-top: 60px;}
 .slider-content h2 {font-size: 18px !important;line-height: 24px !important;}
 .slider-content h1 {font-size: 20px !important;line-height: 26px !important;}
-.layer-1-3 a.ready-btn {padding: 8px 15px;}
+.layer-1-3 a.ready-btn {padding: 8px 15px;font-size: 12px;width: table;margin: 0 auto;}
 .section-headline h2 {font-size: 24px;}
 .well-middle .single-well {margin-top: 0px;}
 .single-skill {margin-bottom: 40px;}
